--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
-    "uuid": "^11.1.0"
+    "@google/genai": "^1.11.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
